@@ -63,6 +63,7 @@
 	* Reduce AC of dragon scales to 1 and dragon scale mails to 5
 	* Killing your Quest leader opens up the stairs to the lower quest
 	  levels (from SporkHack)
+	* Removed the Quest turn limit
 
 	* new branch:
 	  - the Dragon Caves (from NetHack Brass R/S)
